--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
 <body>
-,<h1>Discover hidden places in the world around you</h1>
-<p><a href="#"></a>Download Excursion (Coming soon!)</p>
-<img src="#" alt="cell phone">
-<h1>Your personal travel guide</h1>
-<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-<img src="" alt="tent at a camp">
-<h1>Coming Soon for iPhone and Android</h1>
-<p>Download Excursion (Coming soon!)</p>
+    <h1>Discover hidden places in the world around you</h1>
+        <p><a href="#"></a>Download Excursion (Coming soon!)</p>
+        <video src="C:\Users\Michelle.000\Desktop\excursion\resources\videoes\excursion.mp4"></video>
+    <h1>Your personal travel guide</h1>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\camp.jpg" alt="tent at a camp">
+
+        <img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\phone.png" alt="phone icon">
+    <h1>Coming Soon for iPhone and Android</h1>
+    <p>Download Excursion (Coming soon!)</p>
+    
 </body>
 </html>
