added css for h1 links and image/videos

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-        <p><a href="#"></a>Download Excursion (Coming soon!)</p>
-        <video src="C:\Users\Michelle.000\Desktop\excursion\resources\videoes\excursion.mp4"></video>
+        <p id="link"><a href="#"></a>Download Excursion (Coming soon!)</p>
+        <p id="video"><video src="C:\Users\Michelle.000\Desktop\excursion\resources\videoes\excursion.mp4"></video></p>
     <h1>Your personal travel guide</h1>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\camp.jpg" alt="tent at a camp">
+        <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\camp.jpg" alt="tent at a camp"></p>
 
-        <img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\phone.png" alt="phone icon">
+        <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\phone.png" alt="phone icon"></p>
     <h1>Coming Soon for iPhone and Android</h1>
-    <p>Download Excursion (Coming soon!)</p>
-    
+    <p id="link">Download Excursion (Coming soon!)</p>
+
 </body>
 </html>
