--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 id="title">Discover hidden places in the world around you</h1>
         <p id="link"><a href="#"></a>Download Excursion (Coming soon!)</p>
         <p id="video"><video src="C:\Users\Michelle.000\Desktop\excursion\resources\videoes\excursion.mp4"></video></p>
-    <h1>Your personal travel guide</h1>
-        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <h1 id="personal">Your personal travel guide</h1>
+        <p id="aboutapp">Excursion remembers places you like, and recommends new points of interest around you.</p>
         <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\camp.jpg" alt="tent at a camp"></p>
 
         <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\phone.png" alt="phone icon"></p>
