--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\camp.jpg" alt="tent at a camp"></p>
 
         <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\phone.png" alt="phone icon"></p>
-    <h1>Coming Soon for iPhone and Android</h1>
+    <h1 id="personal">Coming Soon for iPhone and Android</h1>
     <p id="link">Download Excursion (Coming soon!)</p>
 
 </body>
