added auto play to video

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title">Discover hidden places in the world around you</h1>
         <p id="link"><a href="#"></a>Download Excursion (Coming soon!)</p>
-        <p id="video"><video src="C:\Users\Michelle.000\Desktop\excursion\resources\videoes\excursion.mp4"></video></p>
+        <p id="video"><video autoplay loop src="C:\Users\Michelle.000\Desktop\excursion\resources\videoes\excursion.mp4"></video></p>
     <h1 id="personal">Your personal travel guide</h1>
         <p id="aboutapp">Excursion remembers places you like, and recommends new points of interest around you.</p>
         <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\camp.jpg" alt="tent at a camp"></p>
