added copywright using &copy;

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     </head>
 <body>
     <h1 id="title">Discover hidden places in the world around you</h1>
-        <p id="link"><a href="#"></a>Download Excursion (Coming soon!)</p>
+        <p id="link"><a href="#">Download Excursion (Coming soon!)</a></p>
         <video autoplay loop> 
             <source src="resources/videoes/excursion.mp4" type="video/mp4">       
             </video>
     <h1 id="personal">Your personal travel guide</h1>
         <p id="aboutapp">Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\camp.jpg" alt="tent at a camp"></p>
+        <p id="image"><img src="resources/images/camp.jpg" alt="tent at a camp"></p>
 
-        <p id="image"><img src="C:\Users\Michelle.000\Desktop\excursion\resources\images\phone.png" alt="phone icon"></p>
+        <p id="image"><img src="resources/images/phone.png" alt="phone icon"></p>
     <h1 id="personal">Coming Soon for iPhone and Android</h1>
     <p id="link">Download Excursion (Coming soon!)</p>
 
 </body>
-<footer>Excursion</footer>
+<footer>&copy; Excursion</footer>
 </html>
